<resources>
    <string name="app_name">SplitConta</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">0</string>
    <string name="q">0</string>
    <string name="r">0</string>
    <string name="s">0</string>
    <string name="t">0</string>
    <string name="result">0</string>
    <string-array name="nameProducts">
        <item>@string/a</item>
        <item>@string/b</item>
        <item>@string/c</item>
        <item>@string/d</item>
        <item>@string/e</item>
    </string-array>
    <string-array name="totalProductsNumbers">
        <item>@string/f</item>
        <item>@string/g</item>
        <item>@string/h</item>
        <item>@string/i</item>
        <item>@string/j</item>
    </string-array>
    <string-array name="priceOneProducts">
        <item>@string/k</item>
        <item>@string/l</item>
        <item>@string/m</item>
        <item>@string/n</item>
        <item>@string/o</item>
    </string-array>
    <string-array name="priceParcials">
        <item>@string/p</item>
        <item>@string/q</item>
        <item>@string/r</item>
        <item>@string/s</item>
        <item>@string/t</item>
    </string-array>
</resources>
